# django_extended_accounts

./: .gitignore  .pre-commit-config.yaml  License.txt  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  tests.yaml
coverage/: .coverage
django_extended_accounts/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
extended_accounts/: apps.py  urls.py
extended_accounts/helpers/: __init__.py  new_account_form.py  tasks.py  update_account_form.py
extended_accounts/helpers/tests/: test_new_account_form.py  test_tasks.py  test_update_account_form.py
extended_accounts/integration/: tests_integration_celery_post_save_account_signal.py
extended_accounts/models/: Account.py  Profile.py  __init__.py
extended_accounts/models/tests/: test_account.py  test_profile.py
extended_accounts/signals/: __init__.py  post_delete_profile_model.py  post_save_account_model.py  post_save_profile_model.py  pre_save_profile_model.py
extended_accounts/signals/tests/: test_post_delete_profile_model.py  test_post_save_profile_model.py  test_pre_save_profile_model.py
extended_accounts/templates/: base.html
extended_accounts/templates/extended_accounts/: delete_account.html  detail_account.html  list_account.html  login.html  new_account.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  (+3 more)
extended_accounts/views/: AccountConfirmation.py  DeleteAccount.py  DeleteProfileImage.py  DetailAccount.py  ListAccount.py  NewAccount.py  RedirectAccount.py  UpdateAccount.py  __init__.py
(+7 files in other folders)
